--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -711,3 +711,17 @@ PMID: 17989204},
 	address = {New Orleans LA USA},
 	langid = {en}
 }
+
+@article{liu2021,
+	title = {Boba: Authoring and Visualizing Multiverse Analyses},
+	author = {Liu, Yang and Kale, Alex and Althoff, Tim and Heer, Jeffrey},
+	year = {2021},
+	month = {02},
+	date = {2021-02},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {1753--1763},
+	volume = {27},
+	number = {2},
+	doi = {10.1109/TVCG.2020.3028985},
+	url = {https://ieeexplore.ieee.org/document/9216579/}
+}
