--- a/_manuscript/_tex/index.tex
+++ b/_manuscript/_tex/index.tex
@@ -321,8 +321,6 @@ the communication of analytic choices in data analysis practice.
   Something about ``analysis review'' - Roger thinks it's a better to
   have a new word for this.
 \item
-  provide a baseline understand - place to start
-\item
   demonstrate - analytically homogeneous - the table won't look like
   that
 \end{itemize}
@@ -844,34 +842,6 @@ modelling}\label{air-pollution-mortality-modelling-1}
 \begin{itemize}
 \tightlist
 \item
-  Given examples of the failure of LLM models for parsing and examples
-  where authors are unclear about the delivery
-\end{itemize}
-
-The results follows examines {[}x{]} papers for modelling the effect of
-particulate matters on mortality based on Gemini for parsing the
-decision choices. The results from Anthropic Claude is reported in
-Section~\ref{sec-sensitivity}.
-
-Specify how much of validation and review has been done
-
-Decision quality summary
-
-\begin{itemize}
-\tightlist
-\item
-  missingness of the reason and decisions for the paper - how often
-  papers report decisions
-\item
-  look at for one type of decision (time) - what are the choices made by
-  different papers
-\item
-  look at whether decisions changes across time (cluster diagram with
-  year)
-\item
-  Visualize the decision database: apply clustering algorithm and
-  visualize the clusters
-\item
   a characterization of the field, what are the common variables
   included, what smoothing methods are used, what are the options for
   temporal lags often considered, how are models generally estimated
@@ -882,13 +852,158 @@ Decision quality summary
   refers to.
 \end{itemize}
 
-\begin{figure}[H]
+\begin{table}
 
-{\centering \pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/unnamed-chunk-4-1.pdf}}
+\caption{\label{tbl-missing-decisions}THis is hte caption}
+
+\centering{
+
+\begin{tabular}{lll}
+\toprule
+\multicolumn{1}{c}{} & \multicolumn{2}{c}{Missing decision} \\
+\cmidrule(l{3pt}r{3pt}){2-3}
+Missing reason & FALSE & TRUE\\
+\midrule
+FALSE & 95 (32.4\%) & 13 (4.4\%)\\
+TRUE & 179 (61.1\%) & 6 (2\%)\\
+\bottomrule
+\end{tabular}
 
 }
 
-\caption{bla bla bla}
+\end{table}%
+
+The results follows examines 8 papers for modelling the effect of
+particulate matters on mortality based on Gemini for parsing the
+decision choices. The results from Anthropic Claude is reported in the
+sensitivity analysis section in Section~\ref{sec-sensitivity}. From the
+8 papers, we extracted 292 decisions (\textasciitilde{} 5 decisions each
+paper). Out of which the most are parameter-related decisions and
+temporal decision, accounting for 52\% and 46\%, respectively.
+Table~\ref{tbl-missing-decisions} summarizes the missingness of the
+decisions and reason for each record. While most papers provide the
+choice of their decision (e.g.~use of 5 degree of freedom), a 61\% of
+the decisions are missing the reason for the choice. This reveals a
+prevalent phenomenon that authors tend to not justify the choice being
+made, which requires attention. We also observe data quality with the
+extraction: for example in \citet{lee2006}, the variable recorded is
+``smoothing parameter''. Authors are unclear about the delivery Specify
+how much of validation and review has been done.
+
+\begin{longtable}[]{@{}llr@{}}
+
+\caption{\label{tbl-most-common-decisions}Count of xxx in the Gemini
+dataset}
+
+\tabularnewline
+
+\toprule\noalign{}
+Variable & Type & Count \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+time & parameter & 47 \\
+PM & temporal & 38 \\
+temperature & parameter & 37 \\
+humidity & parameter & 25 \\
+temperature & temporal & 23 \\
+humidity & temporal & 18 \\
+PM & parameter & 7 \\
+time & temporal & 5 \\
+
+\end{longtable}
+
+Table~\ref{tbl-most-common-decisions} shows the most common decision for
+air pollution modelling is to the parameter choice for time, PM,
+temperature, and humidity. Given the count of decisions included by all
+the papers, we decide to include the first 6 most common variable-type
+decisions in the analysis to calculate the decision similarities.
+
+Table~\ref{tbl-humidity-temperature-decisions} shows number of knots for
+the natural spline and degree of freedom for smoothing spline for time,
+humidity and temperature variables. {[}TODO{]}
+
+\begin{itemize}
+\item
+  The choice of knot for natural spline is less varied than the choice
+  of degree of freedom for smoothing spline
+\item
+  The choice for temperature and humidity tends to be the same,
+  potentially due to they are both weather related variables.
+\item
+  The choice for time is more varied. and we observe interesting choices
+  of 7.7 in \citet{castillejos2000} and flexible choice of 30 and 100 in
+  \citet{moolgavkar2000} and \citet{moolgavkar2003}, respectively.
+\item
+  most paper choices a fix number for the smoothing parameter while
+  \citet{schwartz2000} choose a proportion of the data: ``50\% of the
+  data'', ``5\% of the data''
+\end{itemize}
+
+{[}do the same for temporal lag{]}
+
+{[}look at for one type of decision (time) - what are the choices made
+by different papers{]}
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1574}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.1111}}
+  >{\raggedright\arraybackslash}p{(\linewidth - 4\tabcolsep) * \real{0.7315}}@{}}
+
+\caption{\label{tbl-humidity-temperature-decisions}Most common decisions
+for humidity and temperature variables in the Gemini dataset}
+
+\tabularnewline
+
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Method
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Variable
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Decision
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+natural spline & humidity & 3, 4 \\
+natural spline & temperature & 3, 4, 6 \\
+natural spline & time & 1, 3, 4, 6, 7, 8, 12 \\
+smoothing spline & humidity & 2, 3, 4, 5, 6, 8, 50\% of the data \\
+smoothing spline & temperature & 2, 3, 4, 5, 6, 8, 50\% of the data \\
+smoothing spline & time & 3, 4, 5, 6, 7, 7.7, 8, 9, 10, 12, 30, 100, 5\%
+of the data in each neighborhood \\
+
+\end{longtable}
+
+Figure~\ref{fig-cluster-paper} shows the clustering of the 62 papers
+based on the decision similarity scores. The dendrogram is generated
+using hierarchical clustering, and the labels are colored according to
+the most common smoothing method used in each paper. The clustering
+reveals three distinct groups of papers, which reflect the modelling
+strategies differ in the European and U.S. studies {[}more on the
+APHENA{]}. The first group (left) primarily uses LOESS smoothing, while
+the second group (middle) employs natural splines, and the third group
+(right) uses smoothing splines.
+
+\phantomsection\label{cell-fig-cluster-paper}
+\begin{figure}[H]
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{index_files/figure-pdf/fig-cluster-paper-1.pdf}}
+
+}
+
+\caption{\label{fig-cluster-paper}The dendrogram (left) and
+multi-dimensional scaling (MDS) (right) based on paper similarity
+distance for 62 air pollution mortality modelling literature. The papers
+are colored by the most common smoothing method used. The MDS reveals
+the three distinct groups of papers. This grouping corresponds to the
+modelling strategies differ in the European and U.S. studies, documented
+in ALPHENA.}
 
 \end{figure}%
 
@@ -1153,6 +1268,12 @@ drawn around each method group.}
   report another in the paper - it would be interesting to compare the
   paper and the script with some syntax extraction.
 \item
+  Spatial decisions are generally not well captured because it often
+  conducted uniformly as estimating the city individually to accommodate
+  city heterogeneity. Some papers only consider a handful of cities,
+  while in larger studies the individual city effects are then pooled
+  together using random effect.
+\item
   Validation of the output:
 \end{itemize}
 
@@ -1160,6 +1281,17 @@ the nature of the task: Our task involve a reasoning component in that
 it requires casual reasoning to identify the decisions made by the
 authors, and its justification/ rationale, rather than purely
 summarizing the text through pattern-matching.
+
+\begin{itemize}
+\tightlist
+\item
+  some decisions are more varied than others and can be reported by
+  different ways. e.g.~the most common way to report the smoothing
+  parameter for time is the number of knots/ degree of freedom per year.
+  While authors may report this number in different ways, i.e.~``every
+  30 days''. A secondary processing with LLM may be useful to align the
+  raw text into the same reporting unit.s
+\end{itemize}
 
 \bibliographystyle{ACM-Reference-Format}
 \bibliography{references.bib}
