--- a/references.bib
+++ b/references.bib
@@ -725,3 +725,62 @@ PMID: 17989204},
 	doi = {10.1109/TVCG.2020.3028985},
 	url = {https://ieeexplore.ieee.org/document/9216579/}
 }
+
+@article{lee2006,
+	title = {Association between air pollution and asthma admission among children in Hong Kong},
+	author = {Lee, S. L. and Wong, W. H. S. and Lau, Y. L.},
+	year = {2006},
+	date = {2006},
+	journal = {Clinical \& Experimental Allergy},
+	pages = {1138--1146},
+	volume = {36},
+	number = {9},
+	doi = {10.1111/j.1365-2222.2006.02555.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-2222.2006.02555.x},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2222.2006.02555.x},
+	langid = {en}
+}
+
+@article{moolgavkar2000,
+	title = {Air Pollution and Hospital Admissions for Diseases of the Circulatory System in Three U.S. Metropolitan Areas},
+	author = {Moolgavkar, Suresh H.},
+	year = {2000},
+	month = {07},
+	date = {2000-07-01},
+	journal = {Journal of the Air \& Waste Management Association},
+	pages = {1199--1206},
+	volume = {50},
+	number = {7},
+	doi = {10.1080/10473289.2000.10464162},
+	url = {https://doi.org/10.1080/10473289.2000.10464162},
+	note = {Publisher: Taylor \& Francis}
+{\_}eprint: https://doi.org/10.1080/10473289.2000.10464162}
+}
+
+@article{moolgavkar2003,
+	title = {Air Pollution and Daily Mortality in Two U.S. Counties: Season-Specific Analyses and Exposure-Response Relationships},
+	author = {Moolgavkar, Suresh H.},
+	year = {2003},
+	month = {01},
+	date = {2003-01-01},
+	journal = {Inhalation Toxicology},
+	pages = {877--907},
+	volume = {15},
+	number = {9},
+	doi = {10.1080/08958370390215767},
+	url = {https://doi.org/10.1080/08958370390215767},
+	note = {Publisher: Taylor \& Francis}
+}
+
+@article{schwartz2000,
+	title = {The Distributed Lag between Air Pollution and Daily Deaths},
+	author = {Schwartz, Joel},
+	year = {2000},
+	date = {2000},
+	journal = {Epidemiology},
+	pages = {320--326},
+	volume = {11},
+	number = {3},
+	url = {https://www.jstor.org/stable/3703220},
+	note = {Publisher: Lippincott Williams \& Wilkins}
+}
